2001-05-11  Jim Blandy  <jimb@redhat.com>

	* thread.c (do_captured_list_thread_ids): Use ui_out_tuple_begin
	and ui_out_tuple_end instead of ui_out_list_begin and
	ui_out_list_end.

	* Makefile.in (gnu-v2-abi.o): Add $(demangle_h) to list of
	dependencies.  Reorder dependencies to match #includes in file,
	for easier verification.
	
Fri May 11 13:32:50 2001  Andrew Cagney  <cagney@b1.cygnus.com>

	* breakpoint.c: Replace ui_out_list_begin, ui_out_list_end and
 	make_cleanup_ui_out_list_end with ui_out_tuple_begin,
 	ui_out_tuple_end and make_cleanup_ui_out_tuple_begin_end.
	* cli/cli-setshow.c: Ditto.
	* printcmd.c: Ditto.
	* stack.c: Ditto.

	* ui-out.h (enum ui_out_type): Fix tipo - tupple -> tuple.
	* ui-out.c (ui_out_list_begin): Delete ``lstid'' parameter.
	(ui_out_tuple_begin): New function.
	(ui_out_tuple_end): New function.
	(ui_out_tuple_begin_end): New function.
	(make_cleanup_ui_out_list_begin_end): Replace
 	make_cleanup_ui_out_list_end function.
	* ui-out.h (ui_out_list_begin): Update declaration.
	(make_cleanup_ui_out_list_begin_end): Replace
 	make_cleanup_ui_out_list_end declaration.
	(ui_out_tuple_begin, ui_out_tuple_end): Declare.
	(ui_out_tuple_begin_end): Declare.

2001-05-11  Jim Blandy  <jimb@redhat.com>

	* gnu-v2-abi.c: Don't #include "gdb_regex.h".  We don't use it.

2001-05-11  Andrew Cagney  <ac131313@redhat.com>

	From 2001-03-26 Rodney Brown <RodneyBrown@mynd.com>
	* config/pa/tm-hppa.h: Remove trigraph.
	* hp-symtab-read.c (hpread_type_translate): Provide return value.
	(hpread_read_struct_type): Remove trigraph. Add parameter in
	`warning'.
	(hpread_read_array_type): Provide return value.
	(hpread_type_lookup): Avoid ambiguous `else'. Provide return
	value.
	* hppa-tdep.c (initialize_hp_cxx_exception_support): Remove
	trigraph.

2001-05-11  Jim Blandy  <jimb@redhat.com>

	* mips-tdep.c (mips_store_return_value,
	mips_extract_return_value): Pass arguments to
	return_value_location in the proper order.
